[tool.poetry]
name = "datasciencetest-bloodcellclassification"
version = "0.1.0"
description = ""
authors = ["marieseeqle <162325319+marieseeqle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "datasciencetest_bloodcellclassification"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
